labs/day-04/lab4/starter/openshift/20-transaction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: md287-lab4
  labels:
    app: transaction-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
        - name: transaction-service
          image: md287/transaction-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: md287-lab4
spec:
  selector:
    app: transaction-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: transaction-service
  namespace: md287-lab4
spec:
  to:
    kind: Service
    name: transaction-service
  port:
    targetPort: 8082
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
